--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
     <script src="node_modules/katex/dist/contrib/auto-render.min.js"></script>
     <script src="node_modules/mermaid/dist/mermaid.min.js"></script>
     <script src="node_modules/marked/lib/marked.umd.js"></script>
-    <script src="./renderer.js"></script>
+    <script src="./app.js"></script>
 </body>
 
 </html>
