--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
     <!-- ★追加: 通知用コンテナ -->
     <div id="notification-container" class="notification-container"></div>
 
-    <!-- Scripts -->
+    <!-- ライブラリ読み込み（既存のものを維持） -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-javascript.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-python.min.js"></script>
@@ -337,6 +337,36 @@
     <script src="node_modules/katex/dist/contrib/auto-render.min.js"></script>
     <script src="node_modules/mermaid/dist/mermaid.min.js"></script>
     <script src="node_modules/marked/lib/marked.umd.js"></script>
+
+    <!-- ★ここから下を書き換え（renderer.jsを消して、モジュール群を追加） -->
+    
+    <!-- 0. エラー表示用スクリプト（真っ白画面対策） -->
+    <script>
+        window.onerror = function(message, source, lineno, colno, error) {
+            const overlay = document.createElement('div');
+            overlay.style.cssText = 'position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(50,0,0,0.95);color:#ffcccc;z-index:99999;padding:20px;overflow:auto;font-family:monospace;white-space:pre-wrap;font-size:14px;';
+            overlay.innerHTML = `<h1>Critical Error</h1><h3>${message}</h3><p>${source}:${lineno}:${colno}</p><pre>${error ? error.stack : ''}</pre>`;
+            document.body.appendChild(overlay);
+        };
+        // 名前空間の初期化
+        window.App = window.App || {};
+    </script>
+
+    <!-- 1. 共通モジュール -->
+    <script src="./modules/state.js"></script>
+    <script src="./modules/ui-components.js"></script>
+    <script src="./modules/editor-utils.js"></script>
+
+    <!-- 2. 機能モジュール -->
+    <script src="./modules/pdf-preview.js"></script>
+    <script src="./modules/terminal-manager.js"></script>
+    <script src="./modules/file-explorer.js"></script>
+
+    <!-- 3. エディタ・レイアウト -->
+    <script src="./modules/editor-pane.js"></script>
+    <script src="./modules/layout-manager.js"></script>
+
+    <!-- 4. メインロジック -->
     <script src="./app.js"></script>
 </body>
 
